--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <h1>Welcome to the Snake Game!</h1>
     <div class="game-container">
         <div class="snake-cube"></div>
+        <img src="apple.svg" class="apple">
     </div>
 </body>
 </html>
