snake moves (kinda)

--- a/main.html
+++ b/main.html
@@ -12,5 +12,6 @@
         <div class="snake-cube"></div>
         <img src="apple.svg" class="apple">
     </div>
+    <script src="apple.js"></script>
 </body>
 </html>
