changed to canvas

--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>Welcome to the Snake Game!</h1>
-    <div class="game-container">
-        <div class="snake-cube"></div>
+    <!-- <div class="game-container">
+        <div class="snake-container">
+            <div class="snake-cube"></div>
+        </div>
         <img src="apple.svg" class="apple">
-    </div>
+    </div> -->
+    <canvas width="480" height="480"></canvas>
     <script src="apple.js"></script>
 </body>
 </html>
