added gameover button

--- a/main.html
+++ b/main.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <h1>Welcome to the Snake Game!</h1>
-    <!-- <div class="game-container">
-        <div class="snake-container">
-            <div class="snake-cube"></div>
-        </div>
-        <img src="apple.svg" class="apple">
-    </div> -->
     <canvas width="480" height="480"></canvas>
+    <div class="gameover-cont">
+        <button class="gameover-button">Game Over</button>
+    </div>
     <script src="apple.js"></script>
 </body>
 </html>
