--- a/main.html
+++ b/main.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <!-- Uploading the Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to the Snake Game!</h1>
+    <h1>Snake Futuristica</h1>
     <canvas width="480" height="480"></canvas>
     <div class="gameover-cont">
         <button class="gameover-button">Game Over</button>
