improved the lost botton

--- a/main.html
+++ b/main.html
@@ -14,7 +14,8 @@
     <h1>Snake Futuristica</h1>
     <canvas width="480" height="480"></canvas>
     <div class="gameover-cont">
-        <button class="gameover-button">Game Over</button>
+        <div class="suck-text">You Lost!</div>
+        <button class="gameover-button glowbutton">Game Over</button>
     </div>
     <script src="apple.js"></script>
 </body>
