added setting button

--- a/snake.html
+++ b/snake.html
@@ -14,9 +14,13 @@
     <h1>Snake Futuristica</h1>
     <canvas width="480" height="480"></canvas>
     <div class="gameover-cont">
-        <div class="suck-text">You Lost!</div>
-        <button class="gameover-button glowbutton">Game Over</button>
+        <div class="child">
+            <div class="suck-text">You Lost!</div>
+            <button class="gameover-button glowbutton">Game Over</button>
+            <button class="setting-button"><img src="./settingicon.svg" class="setting-img"></button>
+        </div>
+        
     </div>
-    <script src="apple.js"></script>
+    <script src="snake.js"></script>
 </body>
 </html>
