made settings interactive

--- a/snake.html
+++ b/snake.html
@@ -15,8 +15,10 @@
     <canvas width="480" height="480"></canvas>
     <div class="gameover-cont">
         <div class="child">
-            <div class="suck-text">You Lost!</div>
-            <button class="gameover-button glowbutton">Game Over</button>
+            <div class="grandchild">
+                <div class="suck-text">You Lost!</div>
+                <button class="gameover-button glowbutton">Game Over</button>
+            </div>
             <button class="setting-button"><img src="./settingicon.svg" class="setting-img"></button>
         </div>
         
