--- a/snake.html
+++ b/snake.html
@@ -20,6 +20,7 @@
                 <button class="gameover-button glowbutton">Game Over</button>
             </div>
             <button class="setting-button"><img src="./settingicon.svg" class="setting-img"></button>
+            <button class="leaderboard-button"><img src="./leaderboard.svg" class="leaderboard-img"></button>
         </div>
         
     </div>
