cleaned up the code

--- a/snake.html
+++ b/snake.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <!-- Uploading the style Sheets -->
+    <link href="./style/mainPage.css" rel="stylesheet" type="text/css">
+    <link href="./style/leaderPage.css" rel="stylesheet" type="text/css">
+    <link href="./style/lostPage.css" rel="stylesheet" type="text/css">
+    <link href="./style/settingPage.css" rel="stylesheet" type="text/css">
     <!-- Uploading the Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +23,8 @@
                 <div class="suck-text">You Lost!</div>
                 <button class="gameover-button glowbutton">Game Over</button>
             </div>
-            <button class="setting-button"><img src="./settingicon.svg" class="setting-img"></button>
-            <button class="leaderboard-button"><img src="./leaderboard.svg" class="leaderboard-img"></button>
+            <button class="setting-button"><img src="./images/settingicon.svg" class="setting-img"></button>
+            <button class="leaderboard-button"><img src="./images/leaderboard.svg" class="leaderboard-img"></button>
         </div>
         
     </div>
