improved the vairables

--- a/snake.html
+++ b/snake.html
@@ -28,6 +28,6 @@
         </div>
         
     </div>
-    <script src="snake.js"></script>
+    <script src="snake.js" type="module"></script>
 </body>
 </html>
