added rendering Objects

--- a/snake.html
+++ b/snake.html
@@ -20,8 +20,8 @@
     <div class="gameover-cont">
         <div class="child">
             <div class="grandchild">
-                <div class="suck-text">You Lost!</div>
-                <button class="gameover-button glowbutton">Game Over</button>
+                <div class="start-text">Start!</div>
+                <button class="gameover-button glowbutton">Start Game</button>
             </div>
             <button class="setting-button"><img src="./images/settingicon.svg" class="setting-img"></button>
             <button class="leaderboard-button"><img src="./images/leaderboard.svg" class="leaderboard-img"></button>
